             (+) move cdrom_id rules file to separate module udev;
             (+) move v4l_id rules file to separate module udev;
             (+) move accelerometer rules file to separate module udev;
             (+) move mtd_probe rules file to separate module udev;
             (+) move kmod rules file to separate module udev;
             (+) move udev rules file to separate module udev;
        * program:
             (+) remove systemd-sysctl program;
             (+) remove systemd-resolved program;
             (+) remove systemd-timesyncd program;
             (+) remove timedatectl and systemd-timedated programs;
             (+) remove hostnamectl and systemd-hostnamed programs;
             (+) remove systemd-networkd and systemd-networkd-wait-online programs;
             (+) remove systemd-nspawn program;
             (+) remove systemd-machined and machinectl programs;
             (+) remove systemd-localed and localectl programs;
             (+) remove systemd-vconsole-setup program;
             (+) move udevadm to separate module udev;
             (+) move systemd-udevd to separate module udev;
             (+) remove systemd-gpt-auto-generator program;
             (+) remove systemd-efi-boot-generator program;
             (+) move cdrom_id to separate module udev;
             (+) move v4l_id to separate module udev;
             (+) move accelerometer to separate module udev;
             (+) move mtd_probe to separate module udev;
             (+) move ata_id to separate module udev;
             (+) move collect to separate module udev;
             (+) move scsi_id to separate module udev;
             (+) remove systemd-cryptsetup-generator program;
             (+) remove systemd-cryptsetup program;
             (+) remove systemd-cat program;
             (+) remove systemd-rc-local-generator program;
             (+) remove systemd-sysv-generator program;
        * tests:
             (+) move test-udev to separate module udev;