@@ -106,16 +106,6 @@
                                 this value as current runlevel and
                                 ignore utmp.</para></listitem>
                         </varlistentry>
-
-                        <varlistentry>
-                                <term><varname>$PREVLEVEL</varname></term>
-
-                                <listitem><para>If
-                                <varname>$PREVLEVEL</varname> is set,
-                                <command>runlevel</command> will print
-                                this value as previous runlevel and
-                                ignore utmp.</para></listitem>
-                        </varlistentry>
                 </variablelist>
         </refsect1>
 
