@@ -17,6 +17,8 @@ NEW CHANGES:
              (+) move mtd_probe rules file to separate module udev;
              (+) move kmod rules file to separate module udev;
              (+) move udev rules file to separate module udev;
+        * environment:
+             (+) remove PREVLEVEL variable;
         * program:
              (+) remove systemd-sysctl program;
              (+) remove systemd-resolved program;
